# Biome

./: .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  README.md  app-icon.icns  eslint.config.mjs  forge.config.ts  index.html  package-lock.json  package.json  shell.nix  tsconfig.json  vite.config.js  vite.renderer.config.ts
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  build-system.md  localisation.md  logging.md  offline.md  release.md  websocket-protocol.md
electron/: main.ts
electron/ipc/: backgrounds.ts  config.ts  engine.ts  index.ts  models.ts  recordings.ts  seeds.ts  server.ts  settings.ts  update.ts  window.ts
electron/lib/: logger.ts  paths.ts  seeds.ts  serverFiles.ts  serverState.ts  uv.ts  uvSync.ts
licensing/: EULA.rtf  EULA.txt  MODEL_ADDENDUM.md  TOS.md
scripts/: appimage-docker-build.sh  appimage-docker-desktop.sh  appimage-post-make.mjs  appimage-prepare-assets.mjs  generate_scene_edit_props.py
server-components/: .gitignore  README.md  action_logger.py  app_state.py  devices.py  engine_manager.py  gemma4_tool_parser.py  hf_token.py  image_gen.py  inpainting_manager.py  keymap.py  main.py  progress_stages.py  protocol.py  pyproject.toml  qwen_tool_parser.py  safety.py  safety_cache.py  scene_authoring.py  server.py  server_logging.py  system_info.py  video_recorder.py  ws_handlers.py  ws_runner.py  ws_session.py
server-components/engine/: __init__.py  devices.py  image_gen.py  keymap.py  manager.py  safety.py  scene_authoring.py
server-components/recording/: action_logger.py  video_recorder.py
server-components/scripts/: codegen_ts.py
server-components/server/: protocol.py  routes.py  startup.py
server-components/server/session/: connection.py  handlers.py  workers.py
server-components/util/: hf_token.py  server_logging.py  system_info.py
src/: App.jsx  App.tsx  constants.ts  main.tsx  stages.json  stages.ts  styles.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/server-components/: engine_manager.py  pyproject.toml  safety.py  server.py  world_engine.py
src-tauri/src/: lib.rs
src-tauri/windows/: hooks.nsh
src/components/: AudioController.tsx  BackgroundSlideshow.tsx  BottomPanel.jsx  BottomPanel.tsx  ConnectionLostOverlay.jsx  ConnectionLostOverlay.tsx  DevLocaleCycler.tsx  EngineInstallModal.tsx  EngineModeChoice.jsx  EngineModeChoice.tsx  FrameTimelineOverlay.tsx  GooseMode.tsx  HudBackground.jsx  HudOverlay.tsx  HudVideoFrame.tsx  I18nSync.tsx  InputOverlay.tsx  LoadingTunnelCanvas.tsx  MenuSettingsView.tsx  PauseMainView.tsx  PauseOverlay.jsx  PauseOverlay.tsx  PauseScenesView.tsx  PerformanceStatsOverlay.tsx  PortalBackgrounds.jsx  PortalPreview.tsx  PortalSparks.tsx  PortalSparksConfigurator.tsx  ReadyOverlay.tsx  SceneAuthoringPrompt.tsx  SceneCard.tsx  SceneCardAddButton.tsx  SceneCardBase.tsx  SceneEditOverlay.tsx  SceneGrid.tsx  ServerLogDisplay.jsx  ServerLogDisplay.tsx  SettingsPanel.jsx  SettingsPanel.tsx  ShutdownOverlay.tsx  (+14 more)
src/components/engine/: EngineInstallModal.tsx  WorldEngineSection.tsx
src/components/pause/: PauseOverlay.tsx
src/components/scene/: EnvironmentPresetList.tsx  PropTileGrid.tsx  SceneEditOverlay.tsx
src/components/settings/: DebugTab.tsx  EngineTab.tsx  GamepadTab.tsx  GeneralTab.tsx  KeybindRow.tsx  KeyboardTab.tsx  RecordingsModal.tsx
src/components/startup/: StartupLoader.tsx
src/components/ui/: Button.tsx  Checkbox.tsx  ConfirmModal.tsx  FocusReticle.tsx  HudActionButton.tsx  HudTabButton.tsx  MenuButton.tsx  Modal.tsx  OverlayModal.tsx  RawButton.tsx  RawMenuButton.tsx  RawSettingsButton.tsx  SettingsButton.tsx  SettingsCheckbox.tsx  SettingsKeybind.tsx  SettingsRow.tsx  SettingsSection.tsx  SettingsSelect.tsx  SettingsSlider.tsx  SettingsTextInput.tsx  SettingsToggle.tsx  Slider.tsx  ViewLabel.tsx
src/context/: AudioContext.tsx  FocusScopeContext.tsx  PortalContext.jsx  PortalContext.tsx  StreamingContext.jsx  StreamingContext.tsx  VortexContext.tsx  audioContextValue.ts  portalStateMachine.ts  streamingContextTypes.ts  streamingContextValue.ts  streamingLifecycleEffects.ts  streamingLifecycleMachine.ts  streamingLifecyclePayload.ts  streamingWarmConnection.ts
src/context/engineLifecycle/: EngineLifecycleContext.tsx  engineLifecycleContextValue.ts
src/context/startup/: StartupContext.tsx  startupContextValue.ts
src/context/streaming/: StreamingContext.tsx  StreamingProviders.tsx  connection.ts  sceneEditMachine.ts  session.ts  sessionConfig.ts  streamingLifecycleMachine.ts  streamingWarmConnection.ts
src/css/: animations.css  app.css  holo-frame.css  styles.css  video-mask.css
src/hooks/: settingsContextValue.ts  useAppStartup.js  useAppStartup.ts  useBackgroundCycle.ts  useConfig.js  useConfig.jsx  useConfig.tsx  useEngine.js  useEngine.ts  useEngineLogs.ts  useGameInput.js  useGameInput.ts  useGamepadNavigation.ts  usePinnedScenes.ts  usePointerLockFeedback.ts  usePortalAnimator.ts  useSceneActions.ts  useSceneGeneration.ts  useSceneGlowColor.ts  useSceneOrder.ts  useSeedManager.ts  useSeeds.js  useSeeds.ts  useSettings.tsx  useTauri.js  useTauri.ts  useUISound.ts  useVolumeControls.ts  useWebSocket.js  useWebSocket.ts  useWindow.ts
src/hooks/engine/: useEngineApi.ts
src/hooks/input/: useGameInput.ts
src/hooks/scene/: usePropManifest.ts
src/hooks/streaming/: useConnectionActions.ts  useEngineRespawn.ts  useInputLoop.ts  useLoadingFailureCleanup.ts  useSceneEdit.ts  useSessionInit.ts  useWarmConnection.ts
src/i18n/: en.ts  goose.ts  he.ts  index.ts  ja.ts  resources.ts  zh.ts
src/lib/: diagnosticsPayload.ts  focusNavigation.ts  inputModality.ts  networkErrorClassifier.ts  portalAnimation.ts  portalSparksRenderer.ts  vortexRenderer.ts  wsRpc.ts
src/lib/audio/: AudioEngine.ts  registry.ts  synthVortex.ts  types.ts
src/types/: app.ts  globals.d.ts  input.ts  ipc.ts  protocol.generated.ts  protocol.zod.ts  settings.ts  ws.ts
src/utils/: logger.ts  promptSanitizer.js  promptSanitizer.ts  settingsClassifier.ts
