[project]
name = "biome-server"
version = "1.1.0-rc2"
requires-python = "==3.12.*"
dependencies = [
  "world-engine @ https://github.com/Overworldai/world_engine/archive/refs/tags/1.5.4.zip",
  "torch==2.10.0",
  "torchvision==0.25.0",
  "pillow==12.2.0",
  "fastapi==0.135.3",
  "pydantic==2.13.1",
  "uvicorn==0.44.0",
  "websockets==16.0",
  "hf-xet==1.4.3",
  "timm==1.0.26",
  "py-cpuinfo==9.0.0",
  "nvidia-ml-py==13.595.45",
  "psutil==7.1.3",
  "simplejpeg==1.9.0",
  "accelerate==1.12.0",
  "bitsandbytes==0.49.2",
  "llama-cpp-python==0.3.36",
  "gguf>=0.10.0",
  "imageio-ffmpeg==0.6.0",
]

[dependency-groups]
dev = []

[tool.uv]
index-strategy = "unsafe-best-match"
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
override-dependencies = [
  "triton==3.6.0; sys_platform == 'linux'",
  "triton-windows==3.6.0.post26; sys_platform == 'win32'",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
llama-cpp-python = [
  { url = "https://github.com/JamePeng/llama-cpp-python/releases/download/v0.3.36-cu128-Basic-linux-20260416/llama_cpp_python-0.3.36%2Bcu128.basic-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
  { url = "https://github.com/JamePeng/llama-cpp-python/releases/download/v0.3.36-cu128-Basic-win-20260417/llama_cpp_python-0.3.36%2Bcu128.basic-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
  "F",    # pyflakes
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "A",    # flake8-builtins
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "RET",  # flake8-return
  "PIE",  # flake8-pie
  "TC",   # flake8-type-checking
  "ICN",  # flake8-import-conventions
  "ARG",  # flake8-unused-arguments
  "FBT",  # flake8-boolean-trap (Rust-style: keyword-only bools)
  "BLE",  # flake8-blind-except
  "DTZ",  # flake8-datetimez
  "ASYNC",# flake8-async
  "TRY",  # tryceratops (exception handling patterns)
  "RUF",  # ruff-specific
  "PLE",  # pylint errors
  "PLW",  # pylint warnings
  "PERF", # perflint
]
ignore = []

[tool.basedpyright]
include = ["."]
exclude = [".venv", "__pycache__", "build", "dist"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "strict"

# TODO: audit these — temporarily restored verbatim from before the lint
# cleanup pass. Several were narrowed by the ruff cleanup and may no
# longer be needed; the rest deserve a per-rule decision (per-site vs.
# global) rather than a single bulk re-enable.

# ─── Third-party stubs ─────────────────────────────────────────────────
reportMissingTypeStubs = "none"      # third-party libs (timm, simplejpeg) ship no stubs
reportPrivateImportUsage = "none"    # FastAPI/Pydantic re-export pattern

# ─── Third-party untyped surfaces ──────────────────────────────────────
# `engine/manager.py`, `engine/safety.py`, `engine/scene_authoring.py`
# all touch torch / PIL / diffusers / transformers, none of which have
# complete stubs. The Optional* / Argument* reports fire on every
# `world_engine.engine.X` access (the engine handle is opaque) and on
# the chained pipeline calls in scene authoring. Wrapping each call in
# a typed adapter would multiply LoC for marginal gain.
reportArgumentType = "none"
reportOptionalMemberAccess = "none"
reportOptionalCall = "none"
reportOptionalSubscript = "none"
reportPossiblyUnboundVariable = "none"
reportAttributeAccessIssue = "none"
reportMissingParameterType = "none"

# ─── Library opacity (torch/PIL/diffusers — no full stubs) ──────────────
# These reports fire on every torch / PIL / diffusers / transformers
# call site.
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportMissingTypeArgument = "none"
reportUnknownLambdaType = "none"

# ─── Codebase-wide leniency ─────────────────────────────────────────────
reportPrivateUsage = "none"            # using `_foo` from another module
reportUnusedExcept = "none"            # try/except/pass shapes
reportUnnecessaryComparison = "none"   # defensive None checks
reportMatchNotExhaustive = "none"      # most match blocks use wildcard arms
