[project]
name = "biome-server"
version = "1.0.1"
requires-python = "==3.12.*"
dependencies = [
  "world-engine @ https://github.com/Overworldai/world_engine/archive/6fbe09ff9e4fddc931fe781aad1c340c0c819036.zip",
  "torch==2.10.0",
  "torchvision==0.25.0",
  "pillow==12.2.0",
  "fastapi==0.135.3",
  "uvicorn==0.44.0",
  "httpx==0.28.1",
  "websockets==16.0",
  "hf-xet==1.4.3",
  "transformers==5.5.0",
  "timm==1.0.26",
  "py-cpuinfo==9.0.0",
  "nvidia-ml-py==13.595.45; sys_platform != 'darwin'",
  "simplejpeg==1.9.0",
  "diffusers==0.37.1",
  "accelerate==1.12.0",
  "peft==0.18.1",
  "bitsandbytes==0.49.2; sys_platform != 'darwin'",
  "llama-cpp-python==0.3.33; sys_platform != 'darwin'",
  "gguf==0.18.0; sys_platform != 'darwin'",
  # Apple Silicon inference backend. Replaces the legacy MLX path —
  # ``quark.Engine`` is a drop-in for ``world_engine.MLXWorldEngine``
  # on the same hardware, runs the DiT on Metal-cpp directly + the
  # TAEHV VAE on the Apple Neural Engine, and matches the bench's
  # measured wall-step (~63 ms / call at 360p). The ``[engine]``
  # extra brings in torch / Pillow / PyYAML / einops — already
  # transitively present in Biome's deps, no new top-level surface.
  "quark[engine] ; sys_platform == 'darwin'",
]

[dependency-groups]
dev = []

[tool.uv]
index-strategy = "unsafe-best-match"
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
override-dependencies = [
  "triton==3.6.0; sys_platform == 'linux'",
  "triton-windows==3.6.0.post26; sys_platform == 'win32'",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
llama-cpp-python = [
  { url = "https://github.com/JamePeng/llama-cpp-python/releases/download/v0.3.33-cu128-Basic-linux-20260315/llama_cpp_python-0.3.33%2Bcu128.basic-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
  { url = "https://github.com/JamePeng/llama-cpp-python/releases/download/v0.3.33-cu128-Basic-win-20260315/llama_cpp_python-0.3.33%2Bcu128.basic-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
]
# Pin to the experimental Apple Silicon integration branch on quark —
# combines the native-Metal driver (``remove-mlx`` PR #21) with the
# standalone Engine API (``carson/standalone`` PR #22) plus the
# Apple-Silicon-specific tweaks for ``Engine`` (taehv VAE on the ANE,
# manual eager loop, weight pinning, sync=False commit overlap). Bump
# the rev to update; not heading to quark main yet so the branch ref
# would drift under us if we tracked the head.
quark = { git = "https://github.com/Overworldai/quark.git", rev = "64cd8b1" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
